cmake_minimum_required(VERSION 3.18)

project(quadcopter)

set(CMAKE_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/)

add_compile_options(-Wall -Wextra -Wpedantic)

include(CTest)

add_subdirectory(flight-controller)
